# lucy-ng

./: .gitignore  CLAUDE.md  LICENSE  README.md  ibuprofen.lsd  ibuprofen.sol  ibuprofen_final.smi  ibuprofen_solutions.smi  ibuprofen_v2.lsd  ibuprofen_v2.sol  ibuprofen_v3.lsd  ibuprofen_v3.sol  pyproject.toml  rdmo-project-description.txt
.claude/agents/: diagnostic-specialist.md  lucy-devils-advocate.md  lucy-diagnostic.md  lucy-lsd-engineer.md  lucy-nmr-chemist.md  lucy-solution-analyst.md  supervisor.md
.github/agents/: lucy-case-orchestrator.agent.md  lucy-devils-advocate.agent.md  lucy-diagnostic.agent.md  lucy-lsd-engineer.agent.md  lucy-nmr-chemist.agent.md  lucy-solution-analyst.agent.md  lucy-supervisor.agent.md
.github/instructions/: lucy-case.instructions.md
.planning/: CASE9-UAT-04-PASS.md  MERGE_VISUALIZATION_ANALYZER.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  case-uat-gate-criteria.md  config.json  v4.0-MILESTONE-AUDIT.md  v8.0-UAT-POSTMORTEM.md  v9.1-MILESTONE-AUDIT.md
.planning/findings/: form-tolerance.md
.planning/milestones/: v1.2-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.0-MILESTONE-AUDIT.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md  v6.0-ROADMAP.md  v7.0-REQUIREMENTS.md  v7.0-ROADMAP.md  (+5 more)
analysis_ibuprofen/: CASE_RESULTS.md
background/: wenk-thesis.txt
docs/: AI_GUIDE.md  ARCHITECTURE.md  INSTALLATION.md  MCP_INTEGRATION.md  SERVER_BOOTSTRAP.md  USER_GUIDE.md  nmr_shift_prediction_tools.md
schemas/: constraint_inventory_v2.json
scripts/: bootstrap_case_host.sh  figshare_upload.py  verify_case_solution.py  zenodo_upload.py
skill/: SKILL.md
tests/: __init__.py  conftest.py  test_bond_pair_generator.py  test_case_md_wv07.py  test_cli_analyze.py  test_cli_database.py  test_cli_dereplicate.py  test_cli_detect_4j.py  test_cli_identify.py  test_cli_lsd.py  test_cli_main.py  test_cli_pick.py  test_cli_read.py  test_cli_visualize.py  test_cli_webview.py  test_coupling_path_generator.py  test_database.py  test_database_importer.py  test_database_query.py  test_dereplication.py  test_detection_4j.py  test_detection_hybridisation.py  test_detection_neighbours.py  test_fingerprint.py  test_fragment_db.py  test_fragment_searcher.py  test_hmbc_guided_picker.py  test_hmbc_peak_picking_integrity.py  test_hose_parser.py  test_hose_stats_generator.py  test_intensity_symmetry.py  test_inventory_schema.py  test_lsd_analyzer.py  test_lsd_form_tolerance.py  test_lsd_formatter.py  test_lsd_generator.py  test_lsd_models.py  test_lsd_orchestrator.py  test_lsd_parser.py  test_lsd_regression.py  (+26 more)
(+1962 files in other folders)
