[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucy-ng"
version = "0.1.0"
description = "AI-agent powered Computer-Assisted Structure Elucidation for organic natural products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Christoph Steinbeck" }
]
keywords = ["nmr", "chemistry", "structure-elucidation", "case", "natural-products"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "click>=8.0",
    "jsonschema>=4.18.0",
    # nmrglue 0.11 (latest PyPI release) calls np.dtype('a8') at import time,
    # which NumPy 2.0 removed -> `import nmrglue` raises TypeError under the
    # NumPy 2.x that rdkit/scipy pull in. Track git master (numpy-2 compatible)
    # until a fixed release is published on PyPI.
    "nmrglue @ git+https://github.com/jjhelmus/nmrglue.git",
    "numpy>=1.24",
    "pydantic>=2.0",
    "requests>=2.28",
    "rdkit>=2023.0",
    "scipy>=1.10",
    "tqdm>=4.0",
]

[project.scripts]
lucy = "lucy_ng.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
prediction = [
    # NOTE: hose-code-generator has broken dependencies (xmlrunner) on Python 3.12
    # Install manually: pip install git+https://github.com/Ratsemaat/HOSE_code_generator.git --no-deps
    # Then install its actual runtime deps: pip install rdkit
]
webview = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lucy_ng"]
artifacts = ["src/lucy_ng/data/schemas/*", "src/lucy_ng/lsd/filters/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["lucy_ng"]
mypy_path = "src"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
